Scraper module and component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
         <mat-icon>menu</mat-icon>
       </button>
       <span>FIS Scraper</span>
+      <router-outlet></router-outlet>
     </mat-toolbar>
   </mat-sidenav-content>
 </mat-sidenav-container>
