--- a/src/app/scraper/scraper/scraper.component.html
+++ b/src/app/scraper/scraper/scraper.component.html
@@ -1,1 +1,7 @@
-<p>scraper works!</p>
+<nav mat-tab-nav-bar>
+  <a mat-tab-link *ngFor="let link of links"
+     (click)="activeLink = link"
+     [active]="activeLink == link"
+     [routerLink]="link"> {{link}} </a>
+</nav>
+<router-outlet></router-outlet>
