--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
 <mat-sidenav-container class="container" (backdropClick)="close()">
   <mat-sidenav #sidenav (keydown.escape)="close()" disableClose>
-    <p><button mat-button (click)="close()" routerLink="/scraper" routerLinkActive="active">Scraper</button></p>
-    <p><button mat-button (click)="close()">Archive</button></p>
+    <p *ngFor="let link of navLinks"><button mat-button (click)="close()" [routerLink]="link.path" routerLinkActive="active">{{ link.label }}</button></p>
   </mat-sidenav>
   <mat-sidenav-content>
-    <mat-toolbar>
-      <button mat-icon-button (click)="sidenav.open()">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>FIS Scraper</span>
+    <mat-toolbar color="primary">
+      <div class="mat-toolbar-content">
+        <button mat-icon-button (click)="sidenav.open()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>FIS Scraper</span>
+      </div>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
