--- a/src/app/scraper/scraper/scraper.component.html
+++ b/src/app/scraper/scraper/scraper.component.html
@@ -1,7 +1,10 @@
-<nav mat-tab-nav-bar>
-  <a mat-tab-link *ngFor="let link of links"
-     (click)="activeLink = link"
-     [active]="activeLink == link"
-     [routerLink]="link"> {{link}} </a>
-</nav>
-<router-outlet></router-outlet>
+<mat-card>
+  <nav mat-tab-nav-bar>
+    <a mat-tab-link *ngFor="let link of links"
+       (click)="activeLink = link.path"
+       [active]="activeLink == link.path"
+       [routerLink]="link.routerPath"> {{link.label}} </a>
+  </nav>
+  <router-outlet></router-outlet>
+</mat-card>
+
