--- a/src/app/scraper/single-race/single-race.component.scss
+++ b/src/app/scraper/single-race/single-race.component.scss
@@ -2,9 +2,10 @@
   width: min(40rem, 100%);
   padding: 3rem;
   display: flex;
+  gap: .5rem;
   flex-direction: column;
-}
 
-button {
-  margin-top: 3rem;
+  &-submit {
+    margin-top: 3rem
+  }
 }
