--- a/src/app/scraper/scraper/scraper.component.html
+++ b/src/app/scraper/scraper/scraper.component.html
@@ -3,8 +3,8 @@
     <a mat-tab-link *ngFor="let link of links"
        (click)="activeLink = link.path"
        [active]="activeLink == link.path"
-       [routerLink]="link.routerPath"> {{link.label}} </a>
+       [routerLink]="link.routerPath"
+       [routerLinkActive]="link.path === activeLink ? 'active' : ''"> {{link.label}} </a>
   </nav>
   <router-outlet></router-outlet>
 </mat-card>
-
