Adds range-race component.

--- a/src/app/scraper/multi-races/multi-races.component.html
+++ b/src/app/scraper/multi-races/multi-races.component.html
@@ -24,5 +24,6 @@
         <mat-icon>exposure_neg_1</mat-icon>
       </button>
     </div>
+    <button class="single-race-form-submit" mat-raised-button color="primary">Scrap!</button>
   </div>
 </form>
