--- a/src/app/archive/archive/archive.component.html
+++ b/src/app/archive/archive/archive.component.html
@@ -1,1 +1,6 @@
-<p>archive works!</p>
+<mat-card>
+  <mat-card-title>Archive directories:</mat-card-title>
+  <mat-card-content *ngIf="folders$ | async as folders">
+    <app-folder-entry *ngFor="let folder of folders" [folder]="folder"></app-folder-entry>
+  </mat-card-content>
+</mat-card>
