--- a/src/app/shared/file-entry/file-entry.component.html
+++ b/src/app/shared/file-entry/file-entry.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <mat-card-subtitle *ngIf="file.fis_id">{{ file.fis_id }}</mat-card-subtitle>
   <mat-card-title>{{ file.name }}</mat-card-title>
+  <mat-divider inset></mat-divider>
   <mat-card-actions align="end">
     <button mat-button>
       DOWNLOAD
