--- a/src/app/shared/folder-entry/folder-entry.component.scss
+++ b/src/app/shared/folder-entry/folder-entry.component.scss
@@ -3,5 +3,16 @@ mat-card {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+
+  &-subtitle {
+    display: flex;
+    align-items: center;
+  }
+
+  & .mat-divider {
+    display: block;
+    margin: auto 0 0;
+  }
 }
+
+
