--- a/src/app/archive/folder-contents/folder-contents.component.scss
+++ b/src/app/archive/folder-contents/folder-contents.component.scss
@@ -9,7 +9,7 @@ mat-card {
   &-content {
     margin-top: 3rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     grid-auto-rows: 12rem;
     gap: 2rem;
   }
