--- a/src/app/scraper/current-files/current-files.component.scss
+++ b/src/app/scraper/current-files/current-files.component.scss
@@ -1,9 +1,8 @@
 mat-card {
   width: min(70rem, 100%);
-  margin: 0 auto;
+  margin: 2rem auto;
 
   &-content {
-    margin-top: 3rem;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     grid-auto-rows: 12rem;
