--- a/src/app/shared/file-entry/file-entry.component.html
+++ b/src/app/shared/file-entry/file-entry.component.html
@@ -1,5 +1,20 @@
 <mat-card>
-  <mat-card-subtitle *ngIf="file.fis_id">{{ file.fis_id }}</mat-card-subtitle>
+  <mat-card-subtitle>
+    <div *ngIf="file.fis_id">
+      {{ file.fis_id }}
+    </div>
+    <div class="file-icon" *ngIf="file.name">
+      <mat-icon *ngIf="file.name.slice(file.name.length - 4).toUpperCase() === '.ZIP'; else regularIcon">
+        folder_special
+      </mat-icon>
+      <ng-template #regularIcon>
+        <mat-icon>
+          description
+        </mat-icon>
+      </ng-template>
+      {{ file.name.slice(file.name.length - 4).toUpperCase() }}
+    </div>
+  </mat-card-subtitle>
   <mat-card-title>{{ file.name }}</mat-card-title>
   <mat-divider inset></mat-divider>
   <mat-card-actions align="end">
