Basic HTTP error handling

--- a/src/app/scraper/range-races/range-races.component.html
+++ b/src/app/scraper/range-races/range-races.component.html
@@ -26,5 +26,5 @@
     </mat-error>
   </mat-form-field>
   <mat-slide-toggle formControlName="details">Details</mat-slide-toggle>
-  <button class="range-races-form-submit" mat-raised-button color="primary">Scrap!</button>
+  <button class="range-races-form-submit" mat-raised-button color="primary" (click)="submit()">Scrap!</button>
 </form>
