--- a/src/app/scraper/current-files/current-files.component.html
+++ b/src/app/scraper/current-files/current-files.component.html
@@ -1,5 +1,10 @@
-<mat-card *ngIf="files$ | async as files">
-  <mat-card-content>
-    <app-file-entry *ngFor="let file of files" [file]="file"></app-file-entry>
-  </mat-card-content>
-</mat-card>
+<ng-container *ngIf="files$ | async as files">
+  <mat-card>
+    <mat-card-title>Current files:</mat-card-title>
+    <mat-divider inset></mat-divider>
+    <mat-card-content>
+      <app-file-entry *ngFor="let file of files" [file]="file"></app-file-entry>
+    </mat-card-content>
+  </mat-card>
+</ng-container>
+
