--- a/src/app/shared/folder-entry/folder-entry.component.html
+++ b/src/app/shared/folder-entry/folder-entry.component.html
@@ -8,9 +8,20 @@
   </mat-card-title>
   <mat-divider inset></mat-divider>
   <mat-card-actions align="end">
+    <button mat-button (click)="download()">
+      <mat-icon>save_alt</mat-icon>
+      DOWNLOAD
+    </button>
     <button mat-button [routerLink]="folder.name">
       <mat-icon>folder_open</mat-icon>
       OPEN
     </button>
   </mat-card-actions>
+  <mat-card-footer>
+    <mat-progress-bar *ngIf="download$ | async as download"
+                      [mode]="download.state === 'PENDING' ? 'buffer' : 'determinate'"
+                      [value]="download.progress"
+                      [color]="download.state === 'DONE' || download.state === 'IN_PROGRES' ? 'accent' : 'warn'">
+    </mat-progress-bar>
+  </mat-card-footer>
 </mat-card>
