Changes in dropbox service, state for folder content.

--- a/src/app/archive/folder-contents/folder-contents.component.html
+++ b/src/app/archive/folder-contents/folder-contents.component.html
@@ -1,5 +1,5 @@
 <mat-card *ngIf="files$ | async as files; else loader">
-  <mat-card-title *ngIf="folder">{{ folder.name }}</mat-card-title>
+  <mat-card-title *ngIf="folder">{{ folder }}</mat-card-title>
   <mat-divider inset></mat-divider>
   <mat-card-content>
     <app-file-entry *ngFor="let file of files" [file]="file"></app-file-entry>
