--- a/src/app/scraper/current-files/current-files.component.html
+++ b/src/app/scraper/current-files/current-files.component.html
@@ -1,6 +1,19 @@
 <ng-container *ngIf="files$ | async as files">
   <mat-card>
     <mat-card-title>Current files:</mat-card-title>
+    <mat-card-actions *ngIf="files.length > 1" align="end">
+      <button mat-button (click)="downloadAll(files)">
+        DOWNLOAD ALL
+        <mat-icon>
+          save_alt
+        </mat-icon>
+      </button>
+    </mat-card-actions>
+    <mat-progress-bar *ngIf="download$ | async as download"
+                      [mode]="download.state === 'PENDING' ? 'buffer' : 'determinate'"
+                      [value]="download.progress"
+                      [color]="download.state === 'DONE' || download.state === 'IN_PROGRES' ? 'accent' : 'warn'">
+    </mat-progress-bar>
     <mat-divider inset></mat-divider>
     <mat-card-content>
       <app-file-entry *ngFor="let file of files" [file]="file"></app-file-entry>
