--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,5 +13,6 @@
       </div>
     </mat-toolbar>
     <router-outlet></router-outlet>
+    <app-notifications></app-notifications>
   </mat-sidenav-content>
 </mat-sidenav-container>
