--- a/src/app/shared/file-entry/file-entry.component.scss
+++ b/src/app/shared/file-entry/file-entry.component.scss
@@ -4,7 +4,7 @@ mat-card {
   display: flex;
   flex-direction: column;
 
-  &-title {
+  &-content {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
