--- a/src/app/shared/file-entry/file-entry.component.html
+++ b/src/app/shared/file-entry/file-entry.component.html
@@ -31,22 +31,11 @@
     </button>
   </mat-card-actions>
 
-  <mat-card-footer [ngSwitch]="file.status">
-    <div *ngSwitchCase="fileStatuses.PROGRESS">
-      <mat-progress-bar mode="query"></mat-progress-bar>
-    </div>
-    <div *ngSwitchCase="fileStatuses.SUCCESS">
-      <mat-progress-bar mode="determinate" [value]="100" color="accent"></mat-progress-bar>
-    </div>
-    <div *ngSwitchCase="fileStatuses.ERROR">
-      <mat-progress-bar mode="determinate" [value]="100" color="warn"></mat-progress-bar>
-    </div>
-    <div *ngSwitchDefault>
-      <mat-progress-bar *ngIf="download$ | async as download"
-                        [mode]="download.state === 'PENDING' ? 'buffer' : 'determinate'"
-                        [value]="download.progress"
-                        [color]="download.state === 'DONE' || download.state === 'IN_PROGRES' ? 'accent' : 'warn'">
-      </mat-progress-bar>
-    </div>
+  <mat-card-footer>
+    <mat-progress-bar *ngIf="download$ | async as download"
+                      [mode]="download.state === 'PENDING' ? 'buffer' : 'determinate'"
+                      [value]="download.progress"
+                      [color]="download.state === 'DONE' || download.state === 'IN_PROGRES' ? 'accent' : 'warn'">
+    </mat-progress-bar>
   </mat-card-footer>
 </mat-card>
