--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <mat-sidenav-content>
     <mat-toolbar color="primary">
       <div class="mat-toolbar-content">
-        <button mat-icon-button (click)="sidenav.open()">
+        <button mat-icon-button (click)="sidenav.open()" matTooltip="Open menu">
           <mat-icon>menu</mat-icon>
         </button>
         <h1 class="app-title">FIS Scraper</h1>
