--- a/src/app/archive/archive/archive.component.html
+++ b/src/app/archive/archive/archive.component.html
@@ -1,5 +1,8 @@
 <mat-card>
-  <mat-card-title>Archive directories:</mat-card-title>
+  <mat-card-title>
+    <app-back-button></app-back-button>
+    Archive directories:
+  </mat-card-title>
   <mat-divider inset></mat-divider>
   <mat-card-content *ngIf="folders$ | async as folders">
     <app-folder-entry *ngFor="let folder of folders" [folder]="folder"></app-folder-entry>
