--- a/src/app/notifications/notifications/notifications.component.html
+++ b/src/app/notifications/notifications/notifications.component.html
@@ -3,7 +3,8 @@
           *ngIf="notifications.length > 0"
           [matMenuTriggerFor]="notificationsContainer"
           [matBadge]="notifications.length > 0 ? notifications.length : null"
-          matBadgePosition="after">
+          matBadgePosition="after"
+          matTooltip="Notifications">
     <mat-icon>notifications</mat-icon>
   </button>
   <mat-menu #notificationsContainer xPosition="before" yPosition="above">
