--- a/src/app/notifications/notification/notification.component.html
+++ b/src/app/notifications/notification/notification.component.html
@@ -8,8 +8,6 @@
     {{ notification!.message }}
   </mat-card-content>
   <mat-card-actions align="end">
-    <button mat-button (click)="close($event)">
-      OK
-    </button>
+    <button mat-button (click)="close($event)">OK</button>
   </mat-card-actions>
 </mat-card>
