--- a/src/app/archive/archive/archive.component.html
+++ b/src/app/archive/archive/archive.component.html
@@ -5,6 +5,113 @@
   </mat-card-title>
   <mat-divider inset></mat-divider>
   <mat-card-content *ngIf="folders$ | async as folders">
-    <app-folder-entry *ngFor="let folder of folders" [folder]="folder"></app-folder-entry>
+    <mat-accordion class="accordion" multi>
+      <mat-expansion-panel *ngFor="let folder of folders">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <mat-icon svgIcon="folder_icon"></mat-icon>
+            {{ folder.name }}
+          </mat-panel-title>
+          <mat-panel-description>
+            <button
+              mat-icon-button
+              (click)="
+                $event.stopPropagation(); downloadFolder(folder.entries)
+              ">
+              <mat-icon> download </mat-icon>
+            </button>
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <table mat-table [dataSource]="folder.entries" multiTemplateDataRows>
+          <ng-container
+            *ngFor="let column of displayedColumns"
+            [matColumnDef]="column">
+            <th mat-header-cell *matHeaderCellDef>
+              {{ column !== 'expand' ? column : ('' | capitalize) }}
+            </th>
+            <td mat-cell *matCellDef="let element">
+              <ng-container *ngIf="column === 'tournament'">
+                {{ element.tournament.name }}
+              </ng-container>
+              <ng-container *ngIf="column === 'date'">
+                {{ element.date | date }}
+              </ng-container>
+              <ng-container *ngIf="column === 'details'">
+                <mat-icon [color]="element.details ? 'accent' : 'warn'">
+                  {{ element.details ? 'check_circle' : 'cancel' }}
+                </mat-icon>
+              </ng-container>
+              <ng-container *ngIf="column === 'kind'">
+                <mat-icon
+                  [svgIcon]="element.kind"
+                  [matTooltip]="element.kind | capitalize"></mat-icon>
+              </ng-container>
+              <ng-container
+                *ngIf="
+                  column === 'fis_id' ||
+                  column === 'place' ||
+                  column === 'hill_size'
+                ">
+                {{ element[column] }}
+              </ng-container>
+              <ng-container *ngIf="column === 'download'">
+                <button
+                  mat-icon-button
+                  (click)="$event.stopPropagation(); downloadRace(element)">
+                  <mat-icon>download</mat-icon>
+                </button>
+              </ng-container>
+              <ng-container *ngIf="column === 'expand'">
+                <button
+                  mat-icon-button
+                  aria-label="expand row"
+                  (click)="
+                    expandedElement =
+                      expandedElement === element ? null : element;
+                    $event.stopPropagation()
+                  ">
+                  <mat-icon *ngIf="expandedElement !== element"
+                    >keyboard_arrow_down</mat-icon
+                  >
+                  <mat-icon *ngIf="expandedElement === element"
+                    >keyboard_arrow_up</mat-icon
+                  >
+                </button>
+              </ng-container>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="expandedDetail">
+            <td
+              mat-cell
+              *matCellDef="let element"
+              [attr.colspan]="displayedColumns.length">
+              <div
+                class="detail-content"
+                [@detailExpand]="
+                  element === expandedElement ? 'expanded' : 'collapsed'
+                ">
+                <app-archive-race-details
+                  *ngIf="expandedElement === element"
+                  [uuid]="element.uuid"></app-archive-race-details>
+              </div>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr
+            mat-row
+            *matRowDef="let row; columns: displayedColumns"
+            class="element-row"
+            [class.expanded-row]="expandedElement === row"
+            (click)="
+              expandedElement = expandedElement === row ? null : row
+            "></tr>
+          <tr
+            mat-row
+            *matRowDef="let row; columns: ['expandedDetail']"
+            class="detail-row"></tr>
+        </table>
+      </mat-expansion-panel>
+    </mat-accordion>
   </mat-card-content>
 </mat-card>
