--- a/src/app/archive/archive/archive.component.scss
+++ b/src/app/archive/archive/archive.component.scss
@@ -3,10 +3,57 @@ mat-card {
   margin: 0 auto;
 
   &-content {
-    margin-top: 3rem;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-    grid-auto-rows: 12rem;
-    gap: 2rem;
+    margin-top: 1rem;
   }
+}
+
+.accordion .mat-expansion-panel-header-description {
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.accordion .mat-expansion-panel-header-title {
+  justify-content: flex-start;
+  align-items: center;
+  gap: 1rem;
+  font-size: 1.25rem;
+}
+
+table {
+  width: 100%;
+}
+
+tr.detail-row {
+  height: 0;
+}
+
+tr.element-row:not(.expanded-row):hover {
+  background: rgba(255, 255, 255, 0.05);
+}
+
+tr.element-row:not(.expanded-row):active {
+  background: rgba(255, 255, 255, 0.05);
+}
+
+.element-row td {
+  border-bottom-width: 0;
+}
+
+.detail-content {
+  overflow: hidden;
+  display: flex;
+}
+
+td.mat-column-expand {
+  max-width: 2rem;
+  text-align: center;
+}
+
+th.mat-header-cell {
+  text-align: center;
+}
+
+td.mat-cell:not(td.mat-column-expand) {
+  text-align: center;
+  min-width: 3rem;
 }
