--- a/src/app/scraper/current-files/current-files.component.html
+++ b/src/app/scraper/current-files/current-files.component.html
@@ -2,23 +2,58 @@
   <mat-card>
     <mat-card-title>Current files:</mat-card-title>
     <mat-card-actions *ngIf="files.length > 1" align="end">
-      <button mat-button (click)="downloadAll(files)" matTooltip="Download all files as .zip">
-        DOWNLOAD ALL
-        <mat-icon>
-          save_alt
-        </mat-icon>
+      <button
+        mat-button
+        (click)="downloadAll(races.selectedOptions.selected)"
+        matTooltip="Download all files as .zip">
+        {{
+          files.length > races.selectedOptions.selected.length
+            ? 'DOWNLOAD SELECTED'
+            : 'DOWNLOAD ALL'
+        }}
+        <mat-icon> save_alt </mat-icon>
       </button>
     </mat-card-actions>
-    <mat-progress-bar *ngIf="download$ | async as download"
-                      [mode]="download.state === 'PENDING' ? 'buffer' : 'determinate'"
-                      [value]="download.progress"
-                      [color]="download.state === 'DONE' || download.state === 'IN_PROGRES' ? 'accent' : 'warn'">
+    <mat-progress-bar
+      *ngIf="download$ | async as download"
+      [mode]="download.state === 'PENDING' ? 'buffer' : 'determinate'"
+      [value]="download.progress"
+      [color]="
+        download.state === 'DONE' || download.state === 'IN_PROGRES'
+          ? 'accent'
+          : 'warn'
+      ">
     </mat-progress-bar>
     <mat-divider inset></mat-divider>
     <mat-card-content>
-      <app-file-entry *ngFor="let file of files" [file]="file"></app-file-entry>
-      <app-file-spinner *ngIf="spinnerState$ | async"></app-file-spinner>
+      <mat-selection-list #races [disabled]="files.length < 2">
+        <mat-list-option
+          *ngFor="let file of files"
+          selected="true"
+          [value]="file.uuid">
+          <mat-icon
+            mat-list-icon
+            [svgIcon]="
+              file.kind === 'team' && !file.details ? 'zip_file' : 'csv_file'
+            "></mat-icon>
+          <div class="option">
+            <div>
+              <div mat-line>{{ file.place }} {{ file.hill_size }}</div>
+              <div mat-line>{{ file.date }}</div>
+            </div>
+            <div>
+              <button
+                mat-icon-button
+                (click)="$event.stopPropagation(); downloadFile(file)">
+                <mat-icon> download </mat-icon>
+              </button>
+            </div>
+          </div>
+        </mat-list-option>
+        <mat-list-item *ngIf="spinnerState$ | async">
+          <app-file-spinner></app-file-spinner>
+        </mat-list-item>
+      </mat-selection-list>
     </mat-card-content>
   </mat-card>
 </ng-container>
-
