--- a/src/app/scraper/single-race/single-race.component.html
+++ b/src/app/scraper/single-race/single-race.component.html
@@ -1,7 +1,7 @@
 <form class="single-race-form" [formGroup]="raceForm">
   <mat-form-field appearance="fill">
     <mat-label>FIS ID</mat-label>
-    <input matInput type="number" formControlName="fis_id">
+    <input matInput type="number" formControlName="fis_id" />
     <mat-error *ngIf="fisId.hasError('min')">
       Enter <strong>number</strong> greater than 0
     </mat-error>
@@ -13,6 +13,16 @@
     </mat-error>
   </mat-form-field>
   <mat-slide-toggle formControlName="details">Details</mat-slide-toggle>
-  <button class="single-race-form-submit" mat-raised-button color="primary" (click)="submit()">Scrap!</button>
+  <button
+    class="single-race-form-submit"
+    mat-raised-button
+    color="primary"
+    (click)="submit()">
+    Scrap!
+  </button>
 </form>
-<mat-progress-bar *ngIf="progress$ | async as progress" color="accent" [value]="progress * 100" mode="buffer"></mat-progress-bar>
+<mat-progress-bar
+  *ngIf="progress$ | async as progress"
+  color="accent"
+  [value]="progress * 100"
+  mode="buffer"></mat-progress-bar>
