--- a/src/app/shared/back-button/back-button.component.html
+++ b/src/app/shared/back-button/back-button.component.html
@@ -1,5 +1,3 @@
 <button mat-button (click)="goBack()" matTooltip="Back">
-  <mat-icon>
-    arrow_back
-  </mat-icon>
+  <mat-icon> arrow_back </mat-icon>
 </button>
