--- a/src/app/shared/file-spinner/file-spinner.component.html
+++ b/src/app/shared/file-spinner/file-spinner.component.html
@@ -1,3 +1,3 @@
 <div class="file-spinner">
-  <mat-spinner mode="indeterminate"></mat-spinner>
+  <mat-spinner mode="indeterminate" diameter="30" color="accent"></mat-spinner>
 </div>
