--- a/src/app/shared/file-spinner/file-spinner.component.scss
+++ b/src/app/shared/file-spinner/file-spinner.component.scss
@@ -1,6 +1,6 @@
 .file-spinner {
-  width: 100%;
-  height: 100%;
+  width: 2rem;
+  height: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
