--- a/src/app/archive/archive/archive.component.html
+++ b/src/app/archive/archive/archive.component.html
@@ -27,7 +27,7 @@
             *ngFor="let column of displayedColumns"
             [matColumnDef]="column">
             <th mat-header-cell *matHeaderCellDef>
-              {{ column !== 'expand' ? column : ('' | capitalize) }}
+              {{ (column !== 'expand' ? column : '') | capitalize }}
             </th>
             <td mat-cell *matCellDef="let element">
               <ng-container *ngIf="column === 'tournament'">
@@ -91,7 +91,7 @@
                   element === expandedElement ? 'expanded' : 'collapsed'
                 ">
                 <app-archive-race-details
-                  *ngIf="expandedElement === element"
+                  *ngIf="element === expandedElement"
                   [uuid]="element.uuid"></app-archive-race-details>
               </div>
             </td>
