--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -37,17 +37,28 @@ router-outlet {
   padding: 1rem;
 }
 
-.mat-toolbar {
 
-  box-shadow: 0 5px 20px 5px rgba(0,0,0,0.2);;
+.title {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 
-  &-content {
+  &-content{
     margin: 0 auto;
     width: 100%;
     max-width: 70rem;
     display: flex;
     align-items: center;
   }
+}
+
+
+.menu-content {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 70rem;
+  display: flex;
+  align-items: flex-start;
 }
 
 .app-title {
