--- a/src/app/archive/archive-race-details/archive-race-details/archive-race-details.component.html
+++ b/src/app/archive/archive-race-details/archive-race-details/archive-race-details.component.html
@@ -1,14 +1,83 @@
-<table
-  mat-table
-  *ngIf="countriesTableDataSource.data.length"
-  [dataSource]="countriesTableDataSource">
-  <ng-container *ngFor="let column of countriesColumns" [matColumnDef]="column">
-    <th mat-header-cell *matHeaderCellDef>{{ column | capitalize }}</th>
-    <td mat-cell *matCellDef="let item">{{ item[column] }}</td>
-  </ng-container>
-</table>
+<ng-container *ngIf="raceData$ | async as raceData; else loader">
+  <div
+    *ngIf="
+      raceData.participantcountry_set && raceData.participantcountry_set.length
+    "
+    class="table-container mat-elevation-z4">
+    <table mat-table [dataSource]="raceData.participantcountry_set">
+      <ng-container
+        *ngFor="let column of countriesColumns"
+        [matColumnDef]="column">
+        <th mat-header-cell *matHeaderCellDef>
+          {{ column.replace(prefixRegex, '') | capitalize }}
+        </th>
+        <td mat-cell *matCellDef="let item">
+          {{ getNestedValue(item, column) }}
+        </td>
+      </ng-container>
 
-<table
-  mat-table
-  *ngIf="jumpersTableDataSource.data.length > 0"
-  [dataSource]="jumpersTableDataSource"></table>
+      <tr mat-header-row *matHeaderRowDef="countriesColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: countriesColumns"></tr>
+    </table>
+  </div>
+  <div
+    *ngIf="raceData.participant_set && raceData.participant_set.length"
+    class="table-container mat-elevation-z4">
+    <table mat-table [dataSource]="raceData.participant_set">
+      <ng-container matColumnDef="jumper" sticky>
+        <th mat-header-cell *matHeaderCellDef colspan="6">Jumper</th>
+      </ng-container>
+
+      <ng-container matColumnDef="jump1">
+        <th mat-header-cell *matHeaderCellDef colspan="15">Jump 1</th>
+      </ng-container>
+
+      <ng-container matColumnDef="jump2">
+        <th mat-header-cell *matHeaderCellDef colspan="15">Jump 2</th>
+      </ng-container>
+
+      <ng-container matColumnDef="summary" stickyEnd>
+        <th mat-header-cell *matHeaderCellDef colspan="4">Summary</th>
+      </ng-container>
+
+      <ng-container
+        *ngFor="let column of jumpersColumns; let indexOfElement = index"
+        [matColumnDef]="column"
+        [sticky]="indexOfElement < 6"
+        [stickyEnd]="indexOfElement > jumpersColumns.length - 4">
+        <th mat-header-cell *matHeaderCellDef>
+          {{ column.replace(prefixRegex, '') | capitalize }}
+        </th>
+        <td mat-cell *matCellDef="let item">
+          <ng-container *ngIf="column === 'disqualified'; else regularContent">
+            <mat-icon
+              [svgIcon]="item.disqualified ? 'disqualified' : 'finished'"
+              [color]="item.disqualified ? 'warn' : null"
+              [matTooltip]="
+                item.disqualified ? 'Disqualified' : 'Finished'
+              "></mat-icon>
+          </ng-container>
+
+          <ng-template #regularContent>
+            {{ getNestedValue(item, column) }}
+          </ng-template>
+        </td>
+      </ng-container>
+
+      <tr
+        mat-header-row
+        *matHeaderRowDef="
+          ['jumper', 'jump1', 'jump2', 'summary'];
+          sticky: true
+        "></tr>
+      <tr mat-header-row *matHeaderRowDef="jumpersColumns; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: jumpersColumns"></tr>
+    </table>
+  </div>
+</ng-container>
+
+<ng-template #loader>
+  <div class="loader">
+    <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+  </div>
+</ng-template>
