--- a/src/app/scraper/current-files/current-files.component.html
+++ b/src/app/scraper/current-files/current-files.component.html
@@ -1,19 +1,21 @@
 <ng-container *ngIf="files$ | async as files">
   <mat-card>
-    <mat-card-title>Current files:</mat-card-title>
-    <mat-card-actions *ngIf="files.length > 1" align="end">
-      <button
-        mat-button
-        (click)="downloadAll(races.selectedOptions.selected)"
-        matTooltip="Download all files as .zip">
-        {{
-          files.length > races.selectedOptions.selected.length
-            ? 'DOWNLOAD SELECTED'
-            : 'DOWNLOAD ALL'
-        }}
-        <mat-icon> save_alt </mat-icon>
-      </button>
-    </mat-card-actions>
+    <div class="header">
+      <mat-card-title>Current files:</mat-card-title>
+      <mat-card-actions *ngIf="files.length > 1" align="end">
+        <button
+          mat-button
+          (click)="downloadAll(races.selectedOptions.selected)"
+          matTooltip="Download all files as .zip">
+          {{
+            files.length > races.selectedOptions.selected.length
+              ? 'DOWNLOAD SELECTED'
+              : 'DOWNLOAD ALL'
+          }}
+          <mat-icon> download </mat-icon>
+        </button>
+      </mat-card-actions>
+    </div>
     <mat-progress-bar
       *ngIf="download$ | async as download"
       [mode]="download.state === 'PENDING' ? 'buffer' : 'determinate'"
@@ -26,9 +28,10 @@
     </mat-progress-bar>
     <mat-divider inset></mat-divider>
     <mat-card-content>
-      <mat-selection-list #races [disabled]="files.length < 2">
+      <mat-selection-list #races>
         <mat-list-option
           *ngFor="let file of files"
+          class="mat-elevation-z1"
           selected="true"
           [value]="file.uuid">
           <mat-icon
@@ -39,12 +42,13 @@
           <div class="option">
             <div>
               <div mat-line>{{ file.place }} {{ file.hill_size }}</div>
-              <div mat-line>{{ file.date }}</div>
+              <div mat-line>{{ file.date | date: 'medium' }}</div>
             </div>
             <div>
               <button
                 mat-icon-button
-                (click)="$event.stopPropagation(); downloadFile(file)">
+                (click)="$event.stopPropagation(); downloadFile(file)"
+                [matTooltip]="'Download ' + file.place + ' ' + file.hill_size">
                 <mat-icon> download </mat-icon>
               </button>
             </div>
