--- a/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details/archive-race-details.component.scss
+++ b/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details/archive-race-details.component.scss
@@ -3,6 +3,42 @@
   display: block;
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgb(55, 55, 55) rgb(66, 66, 66);
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 3px;
+  background-color: rgb(66, 66, 66);
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: rgb(77, 77, 77);
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: rgb(77, 77, 77);
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgb(55, 55, 55);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(44, 44, 44);
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: rgb(44, 44, 44);
+}
+
 .loader {
   margin: 2rem auto;
   display: inline-block;
@@ -10,41 +46,49 @@
 
 .table-container {
   overflow: auto;
-  height: 30rem;
-  width: 60rem;
-  max-width: 100%;
-  margin: 2rem auto;
+  margin: 1rem auto;
+  width: 100%;
+  max-width: 63rem;
+  max-height: 40rem;
 }
 
-th.mat-header-cell {
+table {
+  border-radius: 3px;
+}
+
+th.mat-mdc-header-cell {
   text-align: center;
-  font-size: 0.6rem;
+  font-size: 0.75rem;
   font-weight: 800;
+  padding: 0 .5rem;
 }
 
-td.mat-cell {
-  min-width: 2.5rem;
-  font-size: 0.6rem;
+td.mat-mdc-cell {
+  text-align: center;
+  font-size: 0.75rem;
+  min-width: 2rem;
+  padding: 0 .5rem;
 }
 
-th.cdk-column-jumper,
 th.cdk-column-jump1,
-th.cdk-column-jumper-born,
+th.cdk-column-jump2,
 th.cdk-column-jump_1-rank,
-td.cdk-column-jumper-born,
-td.cdk-column-jump_1-rank {
+td.cdk-column-jump_1-rank,
+th.cdk-column-jump_2-rank,
+td.cdk-column-jump_2-rank {
   border-right: rgba(255, 255, 255, 0.12) solid 1px;
 }
 
-th.cdk-column-summary,
-th.cdk-column-total_points,
-td.cdk-column-total_points {
+
+th.cdk-column-jump1,
+th.cdk-column-jump_1-distance,
+td.cdk-column-jump_1-distance {
   border-left: rgba(255, 255, 255, 0.12) solid 1px;
 }
 
-th.cdk-column-rank,
-th.cdk-column-bib {
-  width: fit-content;
+td.mat-column-rank,
+td.mat-column-bib {
+  width: 2rem;
 }
 
 .mat-icon {
