--- a/apps/fis-scraper-frontend/src/app/scraper/scrap-table/scrap-table.component.scss
+++ b/apps/fis-scraper-frontend/src/app/scraper/scrap-table/scrap-table.component.scss
@@ -1,4 +1,4 @@
-.raw-data-form {
+.single-race-form {
   width: min(40rem, 100%);
   padding: 3rem;
   display: flex;
@@ -6,11 +6,6 @@
   flex-direction: column;
 
   &-submit {
-    margin-top: 3rem;
+   margin-top: 3rem;
   }
-}
-
-h2 {
-  display: flex;
-  align-items: center;
 }
