--- a/apps/fis-scraper-frontend/src/app/app.component.scss
+++ b/apps/fis-scraper-frontend/src/app/app.component.scss
@@ -50,7 +50,7 @@ router-outlet {
 }
 
 .menu-content {
-  margin: 0 auto;
+  margin: 0 auto -0.5rem;
   width: 100%;
   max-width: 70rem;
   display: flex;
