--- a/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details/archive-race-details.component.html
+++ b/apps/fis-scraper-frontend/src/app/archive/archive-race-details/archive-race-details/archive-race-details.component.html
@@ -4,21 +4,22 @@
       raceData.participantcountry_set && raceData.participantcountry_set.length
     "
     class="table-container mat-elevation-z4">
-    <table mat-table [dataSource]="raceData.participantcountry_set">
+    <mat-table [dataSource]="raceData.participantcountry_set">
       <ng-container
         *ngFor="let column of countriesColumns"
         [matColumnDef]="column">
-        <th mat-header-cell *matHeaderCellDef>
+        <mat-header-cell *matHeaderCellDef>
           {{ column.replace(prefixRegex, '') | capitalize }}
-        </th>
-        <td mat-cell *matCellDef="let item">
+        </mat-header-cell>
+        <mat-cell *matCellDef="let item">
           {{ getNestedValue(item, column) }}
-        </td>
+        </mat-cell>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="countriesColumns; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: countriesColumns"></tr>
-    </table>
+      <mat-header-row
+        *matHeaderRowDef="countriesColumns; sticky: true"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: countriesColumns"></mat-row>
+    </mat-table>
   </div>
   <div
     *ngIf="raceData.participant_set && raceData.participant_set.length"
@@ -63,13 +64,9 @@
           </ng-template>
         </td>
       </ng-container>
-
-      <tr
-        mat-header-row
-        *matHeaderRowDef="
-          ['jumper', 'jump1', 'jump2', 'summary'];
-          sticky: true
-        "></tr>
+      <ng-container *ngIf="wideColumns.length > 0">
+        <tr mat-header-row *matHeaderRowDef="wideColumns; sticky: true"></tr>
+      </ng-container>
       <tr mat-header-row *matHeaderRowDef="jumpersColumns; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: jumpersColumns"></tr>
     </table>
