--- a/apps/fis-scraper-frontend/src/app/notifications/notification/notification.component.html
+++ b/apps/fis-scraper-frontend/src/app/notifications/notification/notification.component.html
@@ -1,11 +1,15 @@
-<mat-card>
-  <mat-card-title>
-    <mat-icon [color]="notification!.color">
-      {{ notification!.icon }}
-    </mat-icon>
-  </mat-card-title>
+<mat-card *ngIf="notification">
+  <mat-card-header>
+    <div mat-card-avatar>
+      <mat-icon [color]="notification.color">
+        {{ notification.icon }}
+      </mat-icon>
+    </div>
+
+    <mat-card-title>{{ notification.kind }}</mat-card-title>
+  </mat-card-header>
   <mat-card-content>
-    {{ notification!.message }}
+    {{ notification.message }}
   </mat-card-content>
   <mat-card-actions align="end">
     <button mat-button (click)="close($event)">OK</button>
