--- a/apps/fis-scraper-frontend/src/app/scraper/multi-races/multi-races.component.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/multi-races/multi-races.component.html
@@ -1,10 +1,11 @@
 <form [formGroup]="raceForm">
   <div class="multi-races-form" formArrayName="races">
+    <h2>Scrap multiple races</h2>
     <div
       class="multi-races-form-group"
       *ngFor="let race of races().controls; let i = index"
       [formGroupName]="i">
-      <mat-form-field appearance="fill">
+      <mat-form-field appearance="outline">
         <mat-label>FIS ID</mat-label>
         <input matInput type="number" formControlName="fis_id" />
         <mat-error *ngIf="fisId[i].hasError('min')">
@@ -33,7 +34,8 @@
       class="multi-races-form-submit"
       mat-raised-button
       color="primary"
-      (click)="submit()">
+      (click)="submit()"
+      [disabled]="!raceForm.valid">
       Scrap!
     </button>
   </div>
