--- a/apps/fis-scraper-frontend/src/app/scraper/range-races/range-races.component.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/range-races/range-races.component.html
@@ -1,5 +1,6 @@
 <form class="range-races-form" [formGroup]="raceForm">
-  <mat-form-field appearance="fill">
+  <h2>Scrap races in range of IDs</h2>
+  <mat-form-field appearance="outline">
     <mat-label>Initial FIS ID</mat-label>
     <input matInput type="number" formControlName="start_fis_id" />
     <mat-error *ngIf="startFisId.hasError('min')">
@@ -12,7 +13,7 @@
       Initial FIS ID is <strong>required</strong>
     </mat-error>
   </mat-form-field>
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="outline">
     <mat-label>Final FIS ID</mat-label>
     <input matInput type="number" formControlName="end_fis_id" />
     <mat-error *ngIf="endFisId.hasError('min')">
@@ -30,7 +31,8 @@
     class="range-races-form-submit"
     mat-raised-button
     color="primary"
-    (click)="submit()">
+    (click)="submit()"
+    [disabled]="!raceForm.valid">
     Scrap!
   </button>
 </form>
