--- a/apps/fis-scraper-frontend/src/app/scraper/scraper/scraper.component.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/scraper/scraper.component.html
@@ -1,5 +1,9 @@
 <mat-card>
-  <nav mat-tab-nav-bar>
+  <nav
+    mat-tab-nav-bar
+    [tabPanel]="tabNavPanel"
+    color="primary"
+    backgroundColor="primary">
     <a
       mat-tab-link
       *ngFor="let link of links"
@@ -10,6 +14,7 @@
       {{ link.label }}
     </a>
   </nav>
+  <mat-tab-nav-panel #tabNavPanel></mat-tab-nav-panel>
   <router-outlet></router-outlet>
 </mat-card>
 <app-current-files></app-current-files>
