--- a/apps/fis-scraper-frontend/src/app/scraper/unprocessed-data/unprocessed-data.component.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/unprocessed-data/unprocessed-data.component.html
@@ -1,5 +1,11 @@
 <form class="raw-data-form" [formGroup]="raceForm">
-  <mat-form-field appearance="fill">
+  <h2>
+    Scrap raw data
+    <button mat-icon-button (click)="openDialog()">
+      <mat-icon>help</mat-icon>
+    </button>
+  </h2>
+  <mat-form-field appearance="outline">
     <mat-label>FIS ID</mat-label>
     <input matInput type="number" formControlName="fis_id" />
     <mat-error *ngIf="fisId.hasError('min')">
@@ -17,7 +23,8 @@
     class="raw-data-form-submit"
     mat-raised-button
     color="primary"
-    (click)="submit()">
+    (click)="submit()"
+    [disabled]="!raceForm.valid">
     Scrap!
   </button>
 </form>
