--- a/apps/fis-scraper-frontend/src/styles.scss
+++ b/apps/fis-scraper-frontend/src/styles.scss
@@ -10,3 +10,39 @@ html {
 *::after {
   box-sizing: border-box;
 }
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: rgb(44, 44, 44) rgb(77, 77, 77);
+}
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: rgb(77, 77, 77);
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: rgb(88, 88, 88);
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: rgb(88, 88, 88);
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: rgb(44, 44, 44);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(33, 33, 33);
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: rgb(33, 33, 33);
+}
