--- a/apps/fis-scraper-frontend/src/app/archive/archive/archive.component.html
+++ b/apps/fis-scraper-frontend/src/app/archive/archive/archive.component.html
@@ -10,7 +10,9 @@
           <mat-expansion-panel-header>
             <mat-panel-title>
               <mat-icon svgIcon="folder_icon"></mat-icon>
-              {{ folder.name }}
+              <span>
+                {{ folder.name }}
+              </span>
             </mat-panel-title>
             <mat-panel-description>
               <button
