Fixed header in scrap-table

--- a/apps/fis-scraper-frontend/src/app/scraper/scrap-table/scrap-table.component.html
+++ b/apps/fis-scraper-frontend/src/app/scraper/scrap-table/scrap-table.component.html
@@ -1,6 +1,6 @@
 <form class="single-race-form" [formGroup]="form">
   <h2>
-    Scrap raw data
+    Scrap table
     <button mat-icon-button (click)="openDialog()">
       <mat-icon>help</mat-icon>
     </button>
